# cpp-gl-spaceinvaders

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: game.cpp  game.hpp  game_object.cpp  game_object.hpp  invaders_manager.cpp  invaders_manager.hpp  main.cpp  projectile_manager.cpp  projectile_manager.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp
src/shaders/: sprite.fs  sprite.vs
